--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,15 @@
 @plugin "flowbite/plugin";
 @source "../node_modules/flowbite";
 
+
+body{
+  min-height: 100vh;
+}
 .active{
     color:blue;
     
   }
-  .basket_icon{
+  /* .basket_icon{
     position: relative;
   }
   .basket_icon .dot{
@@ -18,4 +22,14 @@
     right:0px;
     background-color: red;
     border-radius: 5px;
-  }
+  } */
+  .banner{
+    height:34vw;
+    margin:30px auto;
+    background: url('./header_img.png') no-repeat;
+   /* background-size: contain; */
+    
+   }
+   .banner h2{
+      font-size:max(4.5vw,22px)
+   }
