--- a/src/index.css
+++ b/src/index.css
@@ -3,18 +3,16 @@
 @plugin "flowbite/plugin";
 @source "../node_modules/flowbite";
 
-
-body{
+body {
   min-height: 100vh;
 }
-button{
+button {
   cursor: pointer;
 }
-.active{
-    color:blue;
-    
-  }
-  /* .basket_icon{
+.active {
+  color: blue;
+}
+/* .basket_icon{
     position: relative;
   }
   .basket_icon .dot{
@@ -26,17 +24,51 @@ button{
     background-color: red;
     border-radius: 5px;
   } */
-  .banner{
-    height:34vw;
+.banner {
+  height: 34vw;
+
+  margin: 30px auto;
+  background: url("./header_img.png") no-repeat;
+  /* background-size: contain; */
+}
+.banner h2 {
+  font-size: max(4.5vw, 22px);
+}
+.bg-black-90 {
+  background-color: #00000090;
+}
+
+.navbar-profile {
+  position: relative;
   
-    margin:30px auto;
-    background: url('./header_img.png') no-repeat;
-   /* background-size: contain; */
-    
-   }
-   .banner h2{
-      font-size:max(4.5vw,22px)
-   }
-   .bg-black-90{
-    background-color: #00000090;
-   }
+}
+.navbar-profile:hover{
+  cursor: pointer;
+  
+}
+.navbar-profile-dropdown {
+  position: absolute;
+  display: none;
+  right: 0;
+  z-index: 1;
+}
+.navbar-profile:hover .navbar-profile-dropdown {
+  display: flex;
+  flex-direction: column;
+  gap:10px;
+  background-color: #fff2ef;
+  padding:12px 35px 12px 10px;
+  border-radius: 4px;
+  border:1px solid tomato;
+  outline:2px solid white;
+}
+.navbar-profile-dropdown li{
+  display: flex;
+  align-items: center;
+  gap:10px;
+  cursor: pointer;
+  font-size: 14px;
+}
+.navbar-profile-dropdown li:hover{
+  color: tomato;
+}
